@@ -33,6 +33,7 @@ extern "C" {
 #define DFSCH_PARSER_UNEXPECTED_DOT 2
 #define DFSCH_PARSER_UNEXPECTED_OBJECT 3
 #define DFSCH_PARSER_CAR_EXPECTED 4
+#define DFSCH_PARSER_LIST_EXPECTED 5
 #define DFSCH_PARSER_INVALID_ESCAPE 6
 #define DFSCH_PARSER_NULL 254
 #define DFSCH_PARSER_STOPPED 255
