@@ -1,3 +1,11 @@
+2005-11-19  Ales Hakl  <ales at hakl dot net>
+
+	* src/stream.c: Cleaned up vector (and other special values) handling
+
+	* src/native.c: Non-comutative number operators behaves correctly
+
+	* scm/test.scm (condAlt): Updated to match dfsch's notion of booleans
+
 2005-11-18  Ales Hakl  <ales at hakl dot net>
 
 	* src/stream.c (dispatch_string): Hexadecimal string escapes.
